--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <p class="small">중요 공지나 긴급 문의가 있으시면 아래 연락처로 남겨주세요.</p>
 
             <div class="contact" style="margin-top:14px">
-                <div class="small">전화: <strong style="color:#fff">02-1234-5678</strong></div>
-                <div class="small">이메일: <strong style="color:#fff">hello@triowns.co.kr</strong></div>
+                <div class="small">전화: <strong style="color:#fff">010-0000-0000</strong></div>
+                <div class="small">이메일: <strong style="color:#fff">it@trionez.com</strong></div>
             </div>
 
             <div class="social" aria-hidden="true">
