--- a/index.html
+++ b/index.html
@@ -83,10 +83,9 @@
 <div class="wrap" role="main">
     <div>
         <div class="brand">
-            <div class="logo">트리
-                원즈</div>
+            <!--<div class="logo">트리원즈</div>-->
             <div>
-                <h1>트리원즈<br><span style="font-weight:600;color:var(--accent);font-size:20px">공사중입니다</span></h1>
+                <h1>트리원즈(Trionez)<br><span style="font-weight:600;color:var(--accent);font-size:20px">공사중입니다</span></h1>
                 <p class="lead">현재 홈페이지 리뉴얼 작업중입니다. 불편을 드려 죄송하며 빠르게 더 나은 모습으로 찾아뵙겠습니다.</p>
             </div>
         </div>
@@ -95,7 +94,7 @@
             <div class="small">진행 상태</div>
             <div class="progress" aria-hidden="true"><i></i></div>
             <div style="display:flex;gap:12px;margin-top:12px;align-items:center">
-                <a class="btn" href="mailto:hello@triowns.co.kr">문의: hello@triowns.co.kr</a>
+                <a class="btn" href="mailto:hello@triowns.co.kr">문의: jiyoul.choi@trionez.com</a>
                 <span class="small">또는 아래 SNS로 연락주세요</span>
             </div>
         </div>
@@ -120,8 +119,8 @@
             <p class="small">중요 공지나 긴급 문의가 있으시면 아래 연락처로 남겨주세요.</p>
 
             <div class="contact" style="margin-top:14px">
-                <div class="small">전화: <strong style="color:#fff">010-0000-0000</strong></div>
-                <div class="small">이메일: <strong style="color:#fff">it@trionez.com</strong></div>
+                <div class="small">전화: <strong style="color:#fff">010-3213-3113</strong></div>
+                <div class="small">이메일: <strong style="color:#fff">jiyoul.choi@trionez.com</strong></div>
             </div>
 
             <div class="social" aria-hidden="true">
