--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>트리원즈 - 공사중</title>
+    <title>트리원즈(Trionez) - 홈페이지 리뉴얼중</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -100,7 +100,7 @@
         </div>
 
         <footer>
-            © <span id="year"></span> 트리원즈. All rights reserved.
+            © <span id="year"></span> Trionez. All rights reserved.
         </footer>
     </div>
 
