--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="progress" aria-hidden="true"><i></i></div>
             <div style="display:flex;gap:12px;margin-top:12px;align-items:center">
                 <a class="btn" href="mailto:hello@triowns.co.kr">문의: jiyoul.choi@trionez.com</a>
-                <span class="small">또는 아래 SNS로 연락주세요</span>
+                <!--<span class="small">또는 아래 SNS로 연락주세요</span>-->
             </div>
         </div>
 
@@ -122,12 +122,13 @@
                 <div class="small">전화: <strong style="color:#fff">010-3213-3113</strong></div>
                 <div class="small">이메일: <strong style="color:#fff">jiyoul.choi@trionez.com</strong></div>
             </div>
-
+            <!--
             <div class="social" aria-hidden="true">
                 <a href="#" title="Instagram">IG</a>
                 <a href="#" title="LinkedIn">IN</a>
                 <a href="#" title="Twitter">TW</a>
             </div>
+            -->
         </div>
     </aside>
 </div>
