--- a/index.html
+++ b/index.html
@@ -9,94 +9,126 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#0f172a">
     <style>
-        :root{
-            --bg1:#0f172a; /* deep */
-            --bg2:#0b2036; /* blue */
+        :root {
+            --bg1:#0f172a;
+            --bg2:#0b2036;
             --accent:#ffb86b;
+            --accent-light:#ffd6a3;
             --muted:#9aa6b2;
-            --card:rgba(255,255,255,0.035);
+            --card:rgba(255,255,255,0.04);
         }
-        *{box-sizing:border-box}
+        *{box-sizing:border-box;margin:0;padding:0}
         html,body{height:100%}
         body{
-            margin:0;
-            font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", "Apple SD Gothic Neo", "Malgun Gothic", sans-serif;
+            font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", sans-serif;
             background:linear-gradient(180deg,var(--bg1),var(--bg2));
-            color: #e6eef6;
-            -webkit-font-smoothing:antialiased;
-            display:flex;
-            align-items:center;
-            justify-content:center;
+            color:#e6eef6;
+            display:flex;align-items:center;justify-content:center;
             padding:32px;
+            -webkit-font-smoothing:antialiased;
         }
         .wrap{
             width:100%;
-            max-width:1000px;
+            max-width:960px;
             background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-            border-radius:18px;
-            padding:36px;
-            box-shadow: 0 10px 30px rgba(2,6,23,0.6);
+            border-radius:20px;
+            padding:40px;
+            box-shadow:0 10px 30px rgba(0,0,0,0.5);
             display:grid;
-            grid-template-columns: 1fr 420px;
-            gap:28px;
+            grid-template-columns:1fr 380px;
+            gap:32px;
             align-items:center;
         }
         @media(max-width:880px){
-            .wrap{grid-template-columns:1fr; padding:24px}
+            .wrap{grid-template-columns:1fr; padding:28px}
         }
-        .brand{
-            display:flex;
-            gap:18px;
-            align-items:center;
+        h1{
+            font-size:32px;
+            line-height:1.3;
+            letter-spacing:-0.01em;
+            margin-bottom:8px;
         }
-        .logo{
-            width:86px;height:86px;flex:0 0 86px;border-radius:14px;
-            background:linear-gradient(135deg,var(--accent),#ffd6a3);
-            display:grid;place-items:center;color:#111;font-weight:800;font-size:22px;
-            box-shadow: 0 6px 18px rgba(0,0,0,0.5), inset 0 -6px 18px rgba(255,255,255,0.08);
+        h1 span{color:var(--accent);font-weight:600;font-size:20px}
+        .lead{
+            font-size:15px;
+            color:var(--muted);
+            line-height:1.6;
         }
-        h1{margin:0;font-size:34px;letter-spacing:-0.02em}
-        .lead{margin-top:8px;color:var(--muted);font-size:15px}
-        .status{margin-top:22px;padding:18px;background:var(--card);border-radius:12px;color:var(--muted);}
+        .status{
+            margin-top:24px;
+            padding:20px;
+            border-radius:14px;
+            background:var(--card);
+        }
+        .status .small{font-size:13px;color:var(--muted);margin-bottom:8px}
         .progress{
-            margin-top:12px;height:10px;background:rgba(255,255,255,0.04);border-radius:999px;overflow:hidden
+            height:10px;border-radius:999px;overflow:hidden;
+            background:rgba(255,255,255,0.08);
         }
-        .progress > i{display:block;height:100%;width:44%;background:linear-gradient(90deg,var(--accent),#ffd6a3);border-radius:999px;transform-origin:left;animation:fill 6s ease-in-out infinite alternate}
-        @keyframes fill{from{width:18%}to{width:78%}}
+        .progress > i{
+            display:block;height:100%;
+            background:linear-gradient(90deg,var(--accent),var(--accent-light));
+            border-radius:999px;
+            transform-origin:left;
+            animation:fill 5s ease-in-out infinite alternate;
+        }
+        @keyframes fill{from{width:20%}to{width:80%}}
+        .btn{
+            display:inline-block;
+            margin-top:18px;
+            padding:12px 18px;
+            border-radius:12px;
+            background:var(--accent);
+            color:#111;
+            font-weight:600;
+            text-decoration:none;
+            font-size:14px;
+            transition:all 0.25s ease;
+        }
+        .btn:hover{
+            background:var(--accent-light);
+            transform:translateY(-2px);
+            box-shadow:0 4px 12px rgba(0,0,0,0.3);
+        }
         .right{
-            padding:22px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));backdrop-filter: blur(6px);
+            padding:24px;
+            border-radius:16px;
+            background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+            backdrop-filter:blur(8px);
+            text-align:center;
         }
-        .contact{display:flex;flex-direction:column;gap:8px}
-        .btn{display:inline-block;padding:10px 14px;border-radius:10px;background:transparent;border:1px solid rgba(255,255,255,0.06);font-weight:600;text-decoration:none;color:inherit}
-        .small{font-size:13px;color:var(--muted)}
-        .social{display:flex;gap:10px;margin-top:10px}
-        .social a{display:inline-grid;place-items:center;width:38px;height:38px;border-radius:10px;background:rgba(255,255,255,0.02);text-decoration:none;color:inherit;font-weight:600}
-        footer{margin-top:18px;font-size:13px;color:var(--muted)}
-        /* construction SVG animation */
-        .gear{width:220px;height:220px;margin:auto;display:grid;place-items:center}
-        .gear svg{width:160px;height:160px}
+        .gear{
+            width:200px;height:200px;margin:auto;
+            display:grid;place-items:center;
+        }
+        .gear svg{width:150px;height:150px;color:var(--accent)}
         .gear .spin{animation:spin 6s linear infinite}
         @keyframes spin{from{transform:rotate(0deg)}to{transform:rotate(360deg)}}
+        .right h3{
+            font-size:18px;
+            margin:14px 0 6px 0;
+            font-weight:600;
+        }
+        .small{font-size:13px;color:var(--muted);line-height:1.5}
+        .contact{margin-top:14px;display:flex;flex-direction:column;gap:6px}
+        .contact strong{color:#fff}
+        footer{
+            margin-top:24px;
+            font-size:13px;
+            color:var(--muted);
+        }
     </style>
 </head>
 <body>
 <div class="wrap" role="main">
     <div>
-        <div class="brand">
-            <!--<div class="logo">트리원즈</div>-->
-            <div>
-                <h1>트리원즈(Trionez)<br><span style="font-weight:600;color:var(--accent);font-size:20px">공사중입니다</span></h1>
-                <p class="lead">현재 홈페이지 리뉴얼 작업중입니다. 불편을 드려 죄송하며 빠르게 더 나은 모습으로 찾아뵙겠습니다.</p>
-            </div>
-        </div>
+        <h1>트리원즈(Trionez)<br><span>공사중입니다</span></h1>
+        <p class="lead">현재 홈페이지 리뉴얼 작업중입니다.<br>불편을 드려 죄송하며 빠르게 더 나은 모습으로 찾아뵙겠습니다.</p>
 
         <div class="status">
             <div class="small">진행 상태</div>
             <div class="progress" aria-hidden="true"><i></i></div>
-            <div style="display:flex;gap:12px;margin-top:12px;align-items:center">
-                <a class="btn" href="mailto:hello@triowns.co.kr">문의: jiyoul.choi@trionez.com</a>
-                <!--<span class="small">또는 아래 SNS로 연락주세요</span>-->
-            </div>
+            <a class="btn" href="mailto:jiyoul.choi@trionez.com">문의하기</a>
         </div>
 
         <footer>
@@ -105,36 +137,26 @@
     </div>
 
     <aside class="right" aria-labelledby="construction">
-        <div id="construction" style="text-align:center">
+        <div id="construction">
             <div class="gear" aria-hidden="true">
-                <!-- simple animated gear SVG -->
                 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="spin" role="img" aria-label="공사 아이콘">
                     <g fill="none" stroke="currentColor" stroke-width="4">
-                        <circle cx="50" cy="50" r="18" stroke-opacity="0.98" />
-                        <path d="M50 6 L54 20 L66 22 L60 34 L66 46 L54 50 L50 64 L46 50 L34 46 L40 34 L34 22 L46 20 Z" stroke-opacity="0.16"/>
+                        <circle cx="50" cy="50" r="18" stroke-opacity="0.95"/>
+                        <path d="M50 6 L54 20 L66 22 L60 34 L66 46 L54 50 L50 64 L46 50 L34 46 L40 34 L34 22 L46 20 Z" stroke-opacity="0.2"/>
                     </g>
                 </svg>
             </div>
-            <h3 style="margin:12px 0 6px 0">곧 새로운 모습으로 찾아옵니다</h3>
+            <h3>곧 새로운 모습으로 찾아옵니다</h3>
             <p class="small">중요 공지나 긴급 문의가 있으시면 아래 연락처로 남겨주세요.</p>
-
-            <div class="contact" style="margin-top:14px">
-                <div class="small">전화: <strong style="color:#fff">010-3213-3113</strong></div>
-                <div class="small">이메일: <strong style="color:#fff">jiyoul.choi@trionez.com</strong></div>
+            <div class="contact">
+                <div class="small">전화: <strong>010-3213-3113</strong></div>
+                <div class="small">이메일: <strong>jiyoul.choi@trionez.com</strong></div>
             </div>
-            <!--
-            <div class="social" aria-hidden="true">
-                <a href="#" title="Instagram">IG</a>
-                <a href="#" title="LinkedIn">IN</a>
-                <a href="#" title="Twitter">TW</a>
-            </div>
-            -->
         </div>
     </aside>
 </div>
 
 <script>
-    // 자동으로 연도 갱신
     document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 </body>
