--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 
 <!-- Career Section -->
 <section class="career" id="careers">
-    <h2>평범한 사람들이 모여<br>비범한 결과를 이루는<br>멋진 여정을 함께할<br>동료를 기다립니다</h2>
+    <h2>서로의 가능성을 믿고,<br>함께 성장하는 길 위에서<br>당신을 기다립니다.</h2>
     <a href="mailto:jiyoul.choi@trionez.com" class="btn">입사지원</a>
 </section>
 
